--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -1,3 +1,4 @@
+
 /*
 Colors to use:
 dark blue: #06365f
@@ -7,4 +8,74 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url("../images/bgtile.png");
+  background-repeat: repeat-x;
+}
+
+.mainframe {
+  display: flex;
+  justify-content: center;
+}
+
+.contentwrapper {
+  border: 1px solid red;
+  height: 600px;
+  margin-top: 50px;
+  margin-bottom: 30px;
+  width: 90%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between
+
+}
+
+.phones {
+  width: 30%;
+}
+
+.content {
+  border: 1px solid green;
+  width: 60%;
+  display: flex;
+  flex-direction: column;
+}
+
+.nav {
+  display: flex;
+  margin-bottom: 30px;
+  justify-content: center;
+}
+
+.nav-item {
+  margin: 20px;
+  color: blue;
+  text-decoration: none;
+}
+
+.content-top {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.instagram-logo {
+  height: 50px;
+}
+
+.login {
+  background-color: blue;
+  display: flex;
+  align-items: center;
+}
+
+.login-logo {
+  height: 30px;
+}
+
+.content-bottom {
+  background-color: #fff;
+}
+
+.app-download {
+  
 }
